Add header/footer for IL

--- a/content/post/il-2025-03.adoc
+++ b/content/post/il-2025-03.adoc
@@ -18,7 +18,7 @@ _The problem with publishing link:/2025/02/03/interesting-links-february-2025/[F
 
 <!--more-->
 
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == DuckDB
 
@@ -98,3 +98,7 @@ TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium
 == And finally…
 
 * If you've never seen the https://silent.org.pl/home/2022/06/13/the-floppotron-3-0/[Floppotron], it's a thing of wonder.
+
+---
+
+include::il-footer.adoc[]
