--- a/content/post/il-2025-04.adoc
+++ b/content/post/il-2025-04.adoc
@@ -9,11 +9,9 @@ categories:
 - Interesting Links
 ---
 
-**So. Many. Interesting. Links.** Not got time for all this? I've marked 🔥 for my top reads of the month :)
-
 <!--more-->
 
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Data Engineering
 * 🔥 https://luminousmen.com/post/data-engineering-now-with-30-more-bullshit[Data Engineering: Now with 30% More Bullshit]
@@ -88,4 +86,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-TIP: If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+include::il-footer.adoc[]
