--- a/content/post/il-2025-07.adoc
+++ b/content/post/il-2025-07.adoc
@@ -9,19 +9,17 @@ categories:
 - Interesting Links
 ---
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
-
-<!--more-->
-
 First up, allow me a shameless plug for my blog posts this month:
 
 * link:/2025/07/04/writing-to-apache-iceberg-on-s3-using-kafka-connect-with-glue-catalog/[Writing to **Apache Iceberg on S3 using Kafka Connect** with Glue catalog].
 * link:/2025/07/14/keeping-your-data-lakehouse-in-order-table-maintenance-in-apache-iceberg/[Keeping your Data Lakehouse in Order: **Table Maintenance in Apache Iceberg**].
 * 🔥 https://www.confluent.io/blog/streaming-etl-flink-tableflow/[Building Streaming Data Pipelines, Part 2: **Data Processing and Enrichment with Flink SQL**] (see also https://www.confluent.io/blog/building-streaming-data-pipelines-part-1/[Part 1])
 
+<!--more-->
+
 And with that, on to this month's set of link:/categories/interesting-links/[Interesting Links].
 
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Data Engineering
 
@@ -99,8 +97,4 @@ It's genuine, it's articulate (and it reminds me of _real blogging_ that used to
 
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
-====
+include::il-footer.adoc[]
