--- a/content/post/il-2025-08.adoc
+++ b/content/post/il-2025-08.adoc
@@ -9,13 +9,11 @@ categories:
 - Interesting Links
 ---
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
+You can find previous editions of _Interesting Links_ link:/categories/interesting-links/[here].
 
 <!--more-->
 
-You can find previous editions of _Interesting Links_ link:/categories/interesting-links/[here].
-
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Data Engineering
 * 🔥 Ben Rogojan (a.k.a. SeattleDataGuy) has a great list of https://seattledataguy.substack.com/p/5-things-in-data-engineering-that[5 Things in Data Engineering That Still Hold True After 10 Years] (_guess what: data modelling matters, if you start with crap data you'll end with crap data, and so on…_).
@@ -103,8 +101,4 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
-====
+include::il-footer.adoc[]
