--- a/content/post/il-2025-11.adoc
+++ b/content/post/il-2025-11.adoc
@@ -68,9 +68,7 @@ And if you're a speaker, check out the excellent article titled https://samharri
 
 == Anyway, On with the Links 👇
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
-
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Kafka and Event Streaming
 * A trio of articles from Zeinab Dashti about exactly-once processing in Kafka, using the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-kafka-transactions-idempotent-writes-09fe1f75bdab[Transactions], the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-outbox-pattern-f08fd640f683[Outbox Pattern], and the https://medium.com/threadsafe/exactly-once-processing-across-kafka-and-databases-using-the-listen-to-yourself-pattern-0add785f988a[Listen-to-Yourself Pattern]
@@ -268,18 +266,4 @@ Kelly Vaughn explains why in this article https://modernleader.is/posts/invisibl
 
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
-====
-
----
-
-== Just a reminder - leave a comment 👇
-
-* Is the current amount of links in this newsletter about right, or would you like to see fewer?
-* Are there any areas of which you want to see more (or less)?
-* Would you prefer to read this as an email?
-
-Leave a comment below, or find me online :)
+include::il-footer.adoc[]
