--- a/content/post/il-2025-12.adoc
+++ b/content/post/il-2025-12.adoc
@@ -32,9 +32,7 @@ If you've not seen them already, here are some of the highlights:
 
 And so…on with the interesting links!
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
-
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Kafka and Event Streaming
 * Aviv Dozorets published a new tool, https://themoah.medium.com/introducing-klag-the-kafka-lag-exporter-i-always-wanted-d919bdb64a7a[klag], billed as a replacement for the deprecated Kafka Lag Exporter.
@@ -154,7 +152,4 @@ Something else I've found pretty neat is two browser tabs open; one with https:/
 
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-====
+include::il-footer.adoc[]
