--- a/content/post/il-2025-02.adoc
+++ b/content/post/il-2025-02.adoc
@@ -18,6 +18,8 @@ Here's a bunch of interesting links and articles about data that I've come acros
 
 <!--more-->
 
+include::il-header.adoc[]
+
 * Martin Kleppmanm's seminal talk from 2015, https://martin.kleppmann.com/2015/11/05/database-inside-out-at-oredev.html[Turning the database inside out] came up on my feed recently, and is still such an important work.
 * Going back even further, check out the https://dl.acm.org/doi/pdf/10.1145/800296.811515[original SQL paper, from 1974].
 * Not only do I love the clever title, but https://www.infoq.com/articles/rethinking-medallion-architecture/[The End of the Bronze Age: Rethinking the Medallion Architecture] is also a really good explanation of how "shift left" applies in the data world. If you prefer video there's https://www.youtube.com/watch?v=FiZmyl1Npg0[one of those too].
@@ -37,3 +39,7 @@ Here's a bunch of interesting links and articles about data that I've come acros
 * https://renegadeotter.com/2023/11/12/your-database-skills-are-not-good-to-have.html[Your Database Skills Are Not 'Good to Have']
 * Uber run 2,300 MySQL clusters— https://www.uber.com/en-GB/blog/mysql-at-uber/[this post] has details of how they do it.
 
+
+---
+
+include::il-footer.adoc[]
