--- a/content/post/il-2025-10.adoc
+++ b/content/post/il-2025-10.adoc
@@ -29,9 +29,7 @@ Try it out and let me know what you think.
 
 With that, on with the interesting links!
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
-
-TIP: Medium posts often skulk behind a gate, so I've hyperlinked to the Freedium version and included a link to the original using a ⓜ️ icon should you prefer to visit that (or if freedium goes offline).
+include::il-header.adoc[]
 
 == Kafka and Event Streaming
 
@@ -202,8 +200,4 @@ https://blog.pixelmelt.dev/kindle-web-drm/[How I Reversed Amazon's Kindle Web Ob
 
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about link:/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
-====
+include::il-footer.adoc[]
