fix heading level

--- a/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
+++ b/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
@@ -146,7 +146,7 @@ content-type: application/json; charset=UTF-8
 $ export SESSIONHANDLE="e296eb18-9b6e-4fbc-bd6c-0cbb93a7fe28"
 ----
 
-===== [Optional] Validate session and read session config
+=== [Optional] Validate session and read session config
 link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[GET /sessions/:session_handle]
 
 Note here the `runtime-mode` has been set from the `properties` that were passed above in the session creation.
