--- a/README.adoc
+++ b/README.adoc
@@ -9,13 +9,22 @@ This is the source for https://rmoff.net, built using Hugo and hosted via GitHub
 
 == Running locally
 
+First, build the custom Hugo Docker image:
+
+[source,bash]
+----
+docker build -t rmoff-blog-hugo:0.152.2 .
+----
+
+Then run the Hugo server:
+
 [source,bash]
 ----
 docker run --rm -it \
   -v $(pwd):/src \
   -p 1313:1313 \
-  klakegg/hugo:0.105.0-asciidoctor-onbuild \
-  server
+  rmoff-blog-hugo:0.152.2 \
+  server --bind 0.0.0.0
 ----
 
 == Building reveal.js presentations
@@ -36,7 +45,7 @@ Presentations are built using the `build-slides.sh` script, which finds all `sli
 id=my-new-article-slug \
 && git checkout main && git pull && git checkout -b $id && docker run --rm -it \
  -v $(pwd):/src \
- klakegg/hugo:0.105.0-asciidoctor-onbuild \
+ rmoff-blog-hugo:0.152.2 \
  new content/post/$id.adoc
 ----
 
@@ -47,7 +56,7 @@ Run this locally to check the state of the local copy.
 [source,bash]
 ----
 mkdir /tmp/hugo_public && \
-docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public klakegg/hugo:0.105.0-asciidoctor-onbuild  --buildFuture --buildDrafts -d /tmp/public && \
+docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public rmoff-blog-hugo:0.152.2 --buildFuture --buildDrafts -d /tmp/public && \
 docker run -v /tmp/hugo_public:/check ghcr.io/untitaker/hyperlink:0.1.26 /check &&
 rm -rf /tmp/hugo_public
 ----
