Update README to pull from GHCR instead of building locally

--- a/README.adoc
+++ b/README.adoc
@@ -9,22 +9,26 @@ This is the source for https://rmoff.net, built using Hugo and hosted via GitHub
 
 == Running locally
 
-First, build the custom Hugo Docker image:
-
-[source,bash]
-----
-docker build -t rmoff-blog-hugo:0.152.2 .
-----
-
-Then run the Hugo server:
+Run the Hugo server using the pre-built Docker image:
 
 [source,bash]
 ----
 docker run --rm -it \
   -v $(pwd):/src \
   -p 1313:1313 \
-  rmoff-blog-hugo:0.152.2 \
+  ghcr.io/rmoff/rmoff-blog:0.152.2 \
   server --bind 0.0.0.0
+----
+
+The Docker image is automatically built and published to GitHub Container Registry when the Dockerfile changes.
+
+=== Building the Docker image locally (optional)
+
+If you need to modify the Dockerfile, you can build it locally:
+
+[source,bash]
+----
+docker build -t rmoff-blog-hugo:0.152.2 .
 ----
 
 == Building reveal.js presentations
@@ -45,7 +49,7 @@ Presentations are built using the `build-slides.sh` script, which finds all `sli
 id=my-new-article-slug \
 && git checkout main && git pull && git checkout -b $id && docker run --rm -it \
  -v $(pwd):/src \
- rmoff-blog-hugo:0.152.2 \
+ ghcr.io/rmoff/rmoff-blog:0.152.2 \
  new content/post/$id.adoc
 ----
 
@@ -56,7 +60,7 @@ Run this locally to check the state of the local copy.
 [source,bash]
 ----
 mkdir /tmp/hugo_public && \
-docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public rmoff-blog-hugo:0.152.2 --buildFuture --buildDrafts -d /tmp/public && \
+docker run --rm -it -v $(pwd):/src -v /tmp/hugo_public:/tmp/public ghcr.io/rmoff/rmoff-blog:0.152.2 --buildFuture --buildDrafts -d /tmp/public && \
 docker run -v /tmp/hugo_public:/check ghcr.io/untitaker/hyperlink:0.1.26 /check &&
 rm -rf /tmp/hugo_public
 ----
