Update header image

--- a/content/post/raycast02.adoc
+++ b/content/post/raycast02.adoc
@@ -3,7 +3,7 @@ draft: false
 title: 'A love letter to Raycast ❤️'
 date: "2025-12-18T15:59:31Z"
 url: '/2025/12/18/a-love-letter-to-raycast/'
-image: "/images/2025/12/raycast33.webp"
+image: "/images/2025/12/h_IMG_3321.jpeg"
 thumbnail: "/images/2025/12/raycast31.webp"
 credit: "https://bsky.app/profile/rmoff.net"
 categories:
