Update MinIO alternative post with seaweedfs project feedback
Added a note about project updates and UI features.

--- a/content/post/minio-alt.adoc
+++ b/content/post/minio-alt.adoc
@@ -190,6 +190,10 @@ https://github.com/seaweedfs/seaweedfs/wiki/Quick-Start-with-weed-mini[This quic
 (That said, I still just got Claude to do the implementation…).
 Overall there's not too much to change here; a fairly straightforward switchout of Docker images, but the auth does need its own config file (which as with Garage, I inlined in the Docker Compose).
 
+_Edit: Straight after posting this blog, the project replied to say they'll be removing this extra requirement, making it even easier to use! How cool is that :)_
+
+{{< x user="SeaweedFS" id="2011545347685040449" >}}
+
 SeaweedFS comes with its own basic UI which is handy:
 
 image::/images/2026/01/seaweedfs-ui.png[]
