--- a/themes/story/archetypes/il.adoc
+++ b/themes/story/archetypes/il.adoc
@@ -11,7 +11,7 @@ categories:
 
 <!--more-->
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
+include::il-header.adoc[]
 
 == Kafka and Event Streaming
 
@@ -49,10 +49,7 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 
 === Nerd
 
+
 ---
 
-[NOTE]
-====
-* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
-====
+include::il-footer.adoc[]
